change keyboard section according to example template and changed role group info to inside rps table

--- a/examples/menubar/menubar-1/menubar-1.html
+++ b/examples/menubar/menubar-1/menubar-1.html
@@ -144,7 +144,7 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td>Space or Enter Key</td>
+                        <td><kbd>Space or Enter</kbd></td>
                         <td>
                             <ul>
                                 <li>Open or Close popup menu (e.g. toggle).</li>
@@ -152,7 +152,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <td>Left Arrow Key</td>
+                        <td><kbd>Left Arrow</kbd></td>
                         <td>
                             <ul>
                                 <li>Moves focus to previous menubar menu item.</li>
@@ -161,7 +161,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <td>Right Arrow Key</td>
+                        <td><kbd>Right Arrow</kbd></td>
                         <td>
                             <ul>
                                 <li>Moves focus to next menubar menu item.</li>
@@ -170,7 +170,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <td>Down Arrow Key</td>
+                        <td><kbd>Down Arrow</kbd></td>
                         <td>
                             <ul>
                                 <li>Open popup menu.</li>
@@ -179,7 +179,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <td>Up Arrow Key</td>
+                        <td><kbd>Up Arrow </kbd></td>
                         <td>
                             <ul>
                                 <li>Open popup menu.</li>
@@ -188,7 +188,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <td>Home</td>
+                        <td><kbd>Home</kbd></td>
                         <td>
                             <ul>
                                 <li>Moves focus to first menubar menu item.</li>
@@ -196,7 +196,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <td>End</td>
+                        <td><kbd>End</kbd></td>
                         <td>
                             <ul>
                                 <li>Moves focus to last menubar menu item.</li>
@@ -204,7 +204,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <td>Character Key</td>
+                        <td><kbd>Character</kbd></td>
                         <td>
                             <ul>
                                 <li>Moves focus to next menubar item that starts with that letter.</li>
@@ -330,7 +330,7 @@
             </thead>
             <tbody>
                 <tr>
-                    <td>Space or Enter Key</td>
+                    <td><kbd>Space or Enter</kbd></td>
                     <td>
                         <ul>
                             <li>Follow link.</li>
@@ -339,7 +339,7 @@
                     </td>
                 </tr>
                 <tr>
-                    <td>Escape Key</td>
+                    <td><kbd>Escape</kbd></td>
                     <td>
                         <ul>
                             <li>Closes popup menu.</li>
@@ -348,7 +348,7 @@
                     </td>
                 </tr>
                 <tr>
-                    <td>Left Arrow Key</td>
+                    <td><kbd>Left Arrow</kbd></td>
                     <td>
                         <ul>
                             <li>Closes popup menu.</li>
@@ -358,7 +358,7 @@
                     </td>
                 </tr>
                 <tr>
-                    <td>Right Arrow Key</td>
+                    <td><kbd>Right Arrow</kbd></td>
                     <td>
                         <ul>
                             <li>Closes popup menu.</li>
@@ -368,7 +368,7 @@
                     </td>
                 </tr>
                 <tr>
-                    <td>Up Arrow Key</td>
+                    <td><kbd>Up Arrow</kbd></td>
                     <td>
                         <ul>
                             <li>Moves focus to previous popup menu item.</li>
@@ -377,7 +377,7 @@
                     </td>
                 </tr>
                 <tr>
-                    <td>Down Arrow Key</td>
+                    <td><kbd>Down Arrow</kbd></td>
                     <td>
                         <ul>
                             <li>Moves focus to next popup menu item.</li>
@@ -386,7 +386,7 @@
                     </td>
                 </tr>
                 <tr>
-                    <td>Home</td>
+                    <td><kbd>Home</kbd></td>
                     <td>
                         <ul>
                             <li>Moves focus to first popup menu item.</li>
@@ -394,7 +394,7 @@
                     </td>
                 </tr>
                 <tr>
-                    <td>End</td>
+                    <td><kbd>End</kbd></td>
                     <td>
                         <ul>
                             <li>Moves focus to last popup menu item.</li>
@@ -402,7 +402,7 @@
                     </td>
                 </tr>
                 <tr>
-                    <td>Character Key</td>
+                    <td><kbd>Character</kbd></td>
                     <td>
                         <ul>
                             <li>Moves focus to the next popup item that starts with that letter.</li>
