update checkbox 1 example

--- a/examples/checkbox/checkbox-1/checkbox-1.html
+++ b/examples/checkbox/checkbox-1/checkbox-1.html
@@ -14,7 +14,7 @@
 <body>
   <main>
     <h1>Simple Two-State <code>Checkbox</code> Example</h1>
-    <p>Example of a simple two-state checkbox that implements the  <a href="../../#checkbox">design pattern for checkbox</a>.</p>
+    <p>Example of a simple two-state checkbox that implements the  <a href="../../#checkbox">design pattern for checkbox</a> using <code>div</code> elements.</p>
 
 
     <h2 id="example_label">Example Start</h2>
@@ -141,11 +141,10 @@
     <!--  After the js and css files are named with the name of this example, change the href and text of the following 2 links to refer to the appropriate js and css files.  -->
     <ul>
       <li>
-        CSS:
-        <a href="css/checkbox.css" type="tex/css">checkbox.css</a>
+        CSS: <a href="css/checkbox.css" type="tex/css">checkbox.css</a>
       </li>
-      <li>Javascript: <a href="js/checkbox.js" type="text/javascript">checkbox.js</li>
-      </ul>
+      <li>
+        Javascript: <a href="js/checkbox.js" type="text/javascript">checkbox.js</a>
       </li>
     </ul>
   </section>
@@ -163,11 +162,7 @@
     </script>
   </section>
   </main>  
-  </main>
   
-  <nav>
-  <a href="../../#checkbox">Checkbox Design Pattern in WAI-ARIA Authoring Practices 1.1</a>
-  </nav>
   
 </body>
 </html>
