Fix some HTML errors in aria-practices.html.

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -2387,7 +2387,7 @@ A tree that provides navigation to a set of web pages and demonstrates how to ex
       </p>
 
       <p>
-        A primary keyboard navigation convention common across all platforms is that the <kbdd>tab</kbdd> and <kbd>shift+tab</kbd> keys move focus from one UI component to another while other keys, primarily the arrow keys, move focus inside of components that include multiple focusable elements.
+        A primary keyboard navigation convention common across all platforms is that the <kbd>tab</kbd> and <kbd>shift+tab</kbd> keys move focus from one UI component to another while other keys, primarily the arrow keys, move focus inside of components that include multiple focusable elements.
         The path that the focus follows when pressing the <kbd>tab</kbd> key is known as the tab sequence or tab ring.
       </p>
 
@@ -2595,7 +2595,7 @@ A tree that provides navigation to a set of web pages and demonstrates how to ex
 
       <p>
         As described in section <a href="#kbd_generalnav"></a>, the tab sequence should include only one focusable element of a composite UI component.
-        Once a composite contains focus, keys other than <kbd>Tab</kbd> and <kbe>Shift+Tab</kbe> enable the user to move focus among its focusable elements.
+        Once a composite contains focus, keys other than <kbd>Tab</kbd> and <kbd>Shift + Tab</kbd> enable the user to move focus among its focusable elements.
         Authors are free to choose which keys move focus inside of a composite, but they are strongly advised to use the same key bindings as similar components in common GUI operating systems as demonstrated in <a href="#aria_ex"></a>.
       </p>
 
