update menu-button examples

--- a/examples/menu-button/menu-button-1/menu-button-1.html
+++ b/examples/menu-button/menu-button-1/menu-button-1.html
@@ -83,16 +83,14 @@
           </thead>
           <tbody>
             <tr>
-              <td>Space or Enter Key</td>
+            <tr>
+              <td>Down Arrow Key, <br/>Space, <br/>or Enter Key</td>
               <td>Open <code>menu</code> and move focus to first <code>menuitem</code></td>
+            </tr>
             </tr>
             <tr>
               <td>Up Arrow Key</td>
               <td>Open <code>menu</code> and move focus to previous <code>menuitem</code></td>
-            </tr>
-             <tr>
-              <td>Down Arrow Key</td>
-              <td>Open <code>menu</code> and move focus to next <code>menuitem</code></td>
             </tr>
           </tbody>
         </table>
