--- a/examples/menu-button/menu-button-2/menu-button-2.html
+++ b/examples/menu-button/menu-button-2/menu-button-2.html
@@ -9,7 +9,7 @@
     <link href="css/menu-button-2.css" rel="stylesheet">
 
     <script src="../../js/examples.js" type="text/javascript"></script>
-    <script src="js/Menubutton-2.js" type="text/javascript"></script> 
+    <script src="js/Menubutton.js" type="text/javascript"></script> 
     <script src="js/PopupMenuLinks.js" type="text/javascript"></script> 
     <script src="js/MenuItemLinks.js" type="text/javascript"></script> 
   </head>
@@ -39,32 +39,32 @@
             </a>
 
             <ul id="menu2" role="menu" aria-labelledby="menubutton">
-              <li>
+              <li role="none">
                 <a role="menuitem" href="https://www.w3.org/">
                   W3C Home Page
                 </a>
               </li>
-              <li>
+              <li role="none">
                 <a role="menuitem" href="https://www.w3.org/standards/webdesign/accessibility">
                   W3C Web Accessibility Initiative
                 </a>
               </li>
-              <li>
+              <li role="none">
                 <a role="menuitem" href="https://www.w3.org/TR/wai-aria/">
                   Accessible Rich Internet Application Specification
                 </a>
               </li>
-              <li>
+              <li role="none">
                 <a role="menuitem" href="https://www.w3.org/TR/wai-aria-practices/">
                   WAI-ARIA Authoring Practices
                 </a>
-              </li>
+              </li role="none">
               <li>
                 <a role="menuitem" href="https://www.w3.org/TR/wai-aria-implementation/">
                   WAI-ARIA Implementation Guide
                 </a>
               </li>
-              <li>
+              <li role="none">
                 <a role="menuitem" href="https://www.w3.org/TR/accname-aam-1.1/">
                   Accessible Name and Description
                 </a>
@@ -96,16 +96,12 @@
           </thead>
           <tbody>
             <tr>
-              <td>Space or Enter Key</td>
+              <td>Down Arrow Key, <br/>Space, <br/>or Enter Key</td>
               <td>Open <code>menu</code> and move focus to first <code>menuitem</code></td>
             </tr>
             <tr>
               <td>Up Arrow Key</td>
               <td>Open <code>menu</code> and move focus to previous <code>menuitem</code></td>
-            </tr>
-             <tr>
-              <td>Down Arrow Key</td>
-              <td>Open <code>menu</code> and move focus to next <code>menuitem</code></td>
             </tr>
           </tbody>
         </table>
@@ -352,6 +348,21 @@
               <td>
                 <ul>
                   <li>Identifies the link (e.g. <code>a[role=menuitem]</code>) as an interactive element on the page, but removes the link from the tab order of the page.</li>
+                </ul>
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <code>none</code>
+              </td>
+              <td></td>
+              <td>
+                <code>li</code>
+              </td>
+              <td>
+                <ul>
+                  <li>Hides <code>li</code> element native role semantics of <code>listiem</code> from assistive technologies.</li>
+                  <li>If native role semantics of the <code>li</code> element are not removed, it could confuse some users of assistive technologies since listitems and menuitems would be interspersed with each other.</li>
                 </ul>
               </td>
             </tr>
