updated menu bar examples

--- a/examples/menu-button/menu-button-1/menu-button-1.html
+++ b/examples/menu-button/menu-button-1/menu-button-1.html
@@ -366,5 +366,8 @@
         </script>
       </section>
     </main>
+    <nav>
+      <a href="../../../aria-practices.html#menubutton">Menu Button Design Pattern in WAI-ARIA Authoring Practices 1.1</a>
+    </nav>
   </body>
   </html>
