--- a/examples/menu-button/menu-button-2/menu-button-2.html
+++ b/examples/menu-button/menu-button-2/menu-button-2.html
@@ -19,7 +19,7 @@
     <main>
       <h1>Menu Button Example: Links</h1>
  
-      <p>This example implements the features of an <a href="../../../aria-practices.html#menubutton">ARIA Menu Button Design Pattern</a> for a menu of links.
+      <p>This example implements the features of an <a href="../../../aria-practices.html#menubutton">Menu Button Design Pattern</a> for a menu of links.
       An ARIA menu button is defined as any element with <code>role=&quot;button&quot;</code> with an <code>aria-haspopup=&quot;true&quot;</code>.  
       This includes the HTML <code>a</code> element with <code>role="button"</code></code>.
       </p>
@@ -408,5 +408,8 @@
         </script>
       </section>
     </main>
+    <nav>
+      <a href="../../../aria-practices.html#menubutton">Menu Button Design Pattern in WAI-ARIA Authoring Practices 1.1</a>
+    </nav>
   </body>
 </html>
