--- a/examples/checkbox/checkbox-1/checkbox-1.html
+++ b/examples/checkbox/checkbox-1/checkbox-1.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <title>Simple Two-State Checkbox Example</title>
+  <title>Checkbox Example: Two State | WAI-ARIA Authoring Practices 1.1</title>
+
   <link href="../../css/core.css" rel="stylesheet">
   <link href="../../css/table.css" rel="stylesheet">
   <script src="../../js/examples.js" type="text/javascript"></script>
@@ -13,14 +14,21 @@
 </head>
 <body>
   <main>
-    <h1>Simple Two-State <code>Checkbox</code> Example</h1>
+    <h1>Checkbox Example: Two State</h1>
+
     <p>Example of a simple two-state checkbox that implements the  <a href="../../#checkbox">design pattern for checkbox</a> using <code>div</code> elements.</p>
 
+    <p>Similar examples include: </p>
+    <ul>
+      <li><a href="../checkbox-2/checkbox-2.html">Checkbox Example: Mixed State</a>: Mixed state checkbox controlling standard input checkboxes.</li>
+      <!--  list other examples that implement the same design pattern. -->
+    </ul>
 
-    <h2 id="example_label">Example Start</h2>
-    <section aria-labelledby="example_label">
+    <section>
+      <h2 id="ex_label">Example</h2>
+      <div role="separator" id="ex_start_sep" aria-labelledby="ex_start_sep ex_label" aria-label="Start of"></div>
 
-      <div  id="example">
+      <div  id="ex1">
         <h3>Sandwich Condiments</h3>
         <div>
            <div role="checkbox" aria-checked="false"  tabindex= "0">Lettuce</div>
