--- a/examples/menu-button/menu-button-2/menu-button-2.html
+++ b/examples/menu-button/menu-button-2/menu-button-2.html
@@ -85,7 +85,8 @@
               menubutton.init();
             }    
 
-       </script>
+            </script>
+          <div role="separator" id="ex_end_sep" aria-labelledby="ex_end_sep ex_label" aria-label="End of"></div>
         </div>  
 
       </section>   
